# AUDIT

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
API_reference/features/: index.html
API_reference/metrics/: index.html
Getting_started/getting_started/: index.html
about/LICENSE/: index.html
about/release-notes/: index.html
analysis_modes/home_page/: index.html
analysis_modes/longitudinal/: index.html
analysis_modes/multi_model/: index.html
analysis_modes/multivariate/: index.html
analysis_modes/pairwise_model/: index.html
analysis_modes/segmentation_error/: index.html
analysis_modes/single_model/: index.html
analysis_modes/subjects_exploration/: index.html
analysis_modes/univariate/: index.html
app/APP/: index.html
app/home_page/: index.html
app/longitudinal/: index.html
app/multi_model/: index.html
app/multivariate/: index.html
app/pairwise_model/: index.html
app/segmentation_error/: index.html
app/single_model/: index.html
app/subjects_exploration/: index.html
app/univariate/: index.html
docs/: index.md
docs/Getting_started/: getting_started.md
docs/about/: release-notes.md
docs/analysis_modes/: longitudinal.md  multi_model.md  multivariate.md  pairwise_model.md  segmentation_error.md  (+3 more)
getting_started/: index.html
search/: search_index.json
src/: __init__.py  feature_extractor.py  metric_extractor.py
tutorials/: Preprocessing dataset.ipynb
(+218 files in other folders)
