[project]
name = "audit"
version = "0.1.0"
description = "AUDIT, Analysis & evalUation Dashboard of artIficial inTelligence"
authors = ["Carlos Aumente <carlosaumente@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[project.dependencies]
python = "^3.10"
colorama = "0.4.6"
matplotlib = "3.5.3"
numpy = "1.26.4"
pandas = "1.3.5"
pillow = "9.1.1"
plotly = "5.22.0"
pymia = "0.3.2"
pyyaml = "6.0"
scikit-image = "0.19.3"
scipy = "1.13.1"
simpleitk = "2.3.1"
statsmodels = "0.14.0"
stqdm = "0.0.5"
streamlit = "1.32.0"
streamlit-plotly-events = "0.0.6"
tqdm = "4.64.0"
loguru = "0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
